--- a/src/server_manager/ui_components/outline-intro-step.html
+++ b/src/server_manager/ui_components/outline-intro-step.html
@@ -41,7 +41,7 @@
         flex-direction: column;
         flex: 1 0 40%;
         justify-content: space-between;
-        padding: 24px 24px 12px 24px;
+        padding: 16px 24px 12px 24px;
         margin: 12px 12px 0 0;
         height: 320px;
         text-align: left;
@@ -127,7 +127,8 @@
         margin-bottom: 8px;
       }
       .card-footer {
-        height: 54px;
+        margin-top: 12px;
+        border-top: 1px solid var(--border-color);
       }
       .card-footer paper-button {
         width: 100%;
@@ -136,7 +137,6 @@
         letter-spacing: 0.75px;
         background-color: inherit;
         color: var(--light-gray);
-        border-top: 1px solid var(--border-color);
       }
       #digital-ocean .description ul {
         /* NOTE: this URL must be relative to the ui_components sub dir,
