Fix card padding

--- a/src/server_manager/ui_components/outline-intro-step.html
+++ b/src/server_manager/ui_components/outline-intro-step.html
@@ -127,7 +127,7 @@
         margin-bottom: 8px;
       }
       .card-footer {
-        margin-top: 12px;
+        padding-top: 12px;
         border-top: 1px solid var(--border-color);
       }
       .card-footer paper-button {
