Make the unticked box light gray instead of dark gray

--- a/src/server_manager/ui_components/outline-server-settings.html
+++ b/src/server_manager/ui_components/outline-server-settings.html
@@ -70,7 +70,7 @@
         /* We want the ink to be the color we're going to, not coming from */
         --paper-checkbox-checked-color: var(--primary-green);
         --paper-checkbox-checked-ink-color: var(--dark-gray);
-        --paper-checkbox-unchecked-color: var(--dark-gray);
+        --paper-checkbox-unchecked-color: var(--light-gray);
         --paper-checkbox-unchecked-ink-color: var(--primary-green);
       }
       paper-input {
