Hide access key help when settings tab is selected

--- a/src/server_manager/ui_components/outline-server-view.html
+++ b/src/server_manager/ui_components/outline-server-view.html
@@ -742,6 +742,7 @@
       },
       _selectedTabChanged(selectedTab) {
         if (this.selectedTab === 'settings') {
+          this.$.addAccessKeyHelpBubble.hide();
           this.$.serverSettings.update(this.serverName, this.metricsEnabled);
         }
       },
